--- a/flutter_fcm_ex/pubspec.yaml
+++ b/flutter_fcm_ex/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_messaging: ^13.0.0
   overlay_support: ^2.0.1
   flutter_local_notifications: ^9.9.1
+  rxdart: ^0.27.5
+  firebase_analytics: ^9.3.4
 
 dev_dependencies:
   flutter_test:
